@@ -3,6 +3,7 @@ use v5.14;
 use AnyEvent;
 use UAV::Pilot::ARDrone::Driver::Mock;
 use UAV::Pilot::ARDrone::Control::Event;
+use UAV::Pilot::EasyEvent;
 use Test::Moose;
 
 my $ardrone = UAV::Pilot::ARDrone::Driver::Mock->new({
@@ -14,7 +15,11 @@ my $dev = UAV::Pilot::ARDrone::Control::Event->new({
 });
 isa_ok( $dev => 'UAV::Pilot::ARDrone::Control::Event' );
 
-my $cv = $dev->init_event_loop;
+my $cv = AnyEvent->condvar;
+my $event = UAV::Pilot::EasyEvent->new({
+    condvar => $cv,
+});
+$dev->init_event_loop( $cv, $event );
 my $timer; $timer = AnyEvent->timer(
     after => 3,
     cb    => sub {
