@@ -3,6 +3,7 @@ use v5.14;
 use AnyEvent;
 use UAV::Pilot::ARDrone::Driver::Mock;
 use UAV::Pilot::ARDrone::Control::Event;
+use UAV::Pilot::EasyEvent;
 use Test::Moose;
 
 my $ardrone = UAV::Pilot::ARDrone::Driver::Mock->new({
@@ -13,7 +14,11 @@ my $dev = UAV::Pilot::ARDrone::Control::Event->new({
     driver => $ardrone,
 });
 
-my $cv = $dev->init_event_loop;
+my $cv = AnyEvent->condvar;
+my $event = UAV::Pilot::EasyEvent->new({
+    condvar => $cv,
+});
+$dev->init_event_loop( $cv, $event );
 
 $dev->pitch( -0.8 );
 my $found = 0;
